spring cloud config

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
     <module>order-consumer-feign-hystrix</module>
     <module>hystrix-dashboard</module>
     <module>server-gateway</module>
+    <module>config-server</module>
+    <module>config-client</module>
   </modules>
 
 
