--- a/payment-provider/src/main/resources/application.yaml
+++ b/payment-provider/src/main/resources/application.yaml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: payment-service
+  zipkin:
+    base-url: http://localhost:9411/
+  sleuth:
+    sampler:
+      probability: 1
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource   # 数据源
     driver-class-name: com.mysql.jdbc.Driver
