sentinel 以及 整合 openfeign

--- a/alibaba-payment-provider/src/main/resources/application.yml
+++ b/alibaba-payment-provider/src/main/resources/application.yml
@@ -1,14 +1,4 @@
-server:
-  port: 8081
-
 spring:
-  application:
-    name: nacos-payment-provider
-  cloud:
-    nacos:
-      server-addr: 127.0.0.1:8848
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
+  profiles:
+#    active: dev # 开发环境
+    active: info # 开发环境
